fix center alignment #419

--- a/client/src/Components/OceanProfile/OceanProfile.scss
+++ b/client/src/Components/OceanProfile/OceanProfile.scss
@@ -65,7 +65,6 @@
         transform: rotate(270deg);
         height: 92px;
         width: 92px;
-        margin-right: -6px;
         padding-top:20px;
       }
 
